# check_json_data

./: Cargo.toml
data/: CanWebElmSchema.json  cagdemo.json  holywelltown.json
src/: cjd.yml  main.rs
