[package]
name = "check_json_data"
version = "0.1.0"
authors = ["Mark Thornber <enchanted.systems@btinternet.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonschema = "0.4"
#serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#valico = "3.4.0"
