[package]
name = "check_json_data"
description = "Validate a JSON layout definition against a JSON schema"
version = "0.1.0"
authors = ["Mark Thornber <enchanted.systems@btinternet.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33", features = ["yaml"]}
jsonschema = "0.4"
serde_json = "1.0"
